package globals;

//enumerated type to make reading the code easier
public enum Direction{
    NORTH,
    SOUTH,
    EAST,
    WEST;

    public static final int NOEXIT = -1;
}